src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Order_Item_Count__c</fullName>
        <label>Order Item Count</label>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Payment_Status_Text__c</fullName>
        <formula>Order_Payment_Status__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Payment_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Payment Status</label>
        <referenceTo>Order_Payment_Status__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orders_Hour_Central_Time__c</fullName>
        <formula>IF ( DATEVALUE(  Order_Date_Time_Created__c ) &gt;= 
DATE ( YEAR (DATEVALUE(Order_Date_Time_Created__c  )),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE( Order_Date_Time_Created__c )),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( Order_Date_Time_Created__c  )),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE( Order_Date_Time_Created__c  ) &lt; 
DATE ( YEAR (DATEVALUE( Order_Date_Time_Created__c  )),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE( Order_Date_Time_Created__c  )),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( Order_Date_Time_Created__c )),11,1) - DATE (1900,1,7),7)) 
),
(CASE( VALUE(MID(TEXT( Order_Date_Time_Created__c  ),12,2)) , 
00, &apos;19:00&apos;, 
01, &apos;20:00&apos;, 
02, &apos;21:00&apos;, 
03, &apos;22:00&apos;, 
04, &apos;23:00&apos;, 
05, &apos;00:00&apos;, 
06, &apos;01:00&apos;, 
07, &apos;02:00&apos;, 
08, &apos;03:00&apos;, 
09, &apos;04:00&apos;, 
10, &apos;05:00&apos;, 
11, &apos;06:00&apos;, 
12, &apos;07:00&apos;, 
13, &apos;08:00&apos;, 
14, &apos;09:00&apos;, 
15, &apos;10:00&apos;, 
16, &apos;11:00&apos;, 
17, &apos;12:00&apos;, 
18, &apos;13:00&apos;, 
19, &apos;14:00&apos;, 
20, &apos;15:00&apos;, 
21, &apos;16:00&apos;, 
22, &apos;17:00&apos;, 
23, &apos;18:00&apos;, 
NULL))
,
(CASE( VALUE(MID(TEXT(Order_Date_Time_Created__c ),12,2)) , 
00, &apos;18:00&apos;, 
01, &apos;19:00&apos;, 
02, &apos;20:00&apos;, 
03, &apos;21:00&apos;, 
04, &apos;22:00&apos;, 
05, &apos;23:00&apos;, 
06, &apos;00:00&apos;, 
07, &apos;01:00&apos;, 
08, &apos;02:00&apos;, 
09, &apos;03:00&apos;, 
10, &apos;04:00&apos;, 
11, &apos;05:00&apos;, 
12, &apos;06:00&apos;, 
13, &apos;07:00&apos;, 
14, &apos;08:00&apos;, 
15, &apos;09:00&apos;, 
16, &apos;10:00&apos;, 
17, &apos;11:00&apos;, 
18, &apos;12:00&apos;, 
19, &apos;13:00&apos;, 
20, &apos;14:00&apos;, 
21, &apos;15:00&apos;, 
22, &apos;16:00&apos;, 
23, &apos;17:00&apos;, 
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour (Central Time)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Contact_Status__c</fullName>
        <label>PRT Contact Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Reviewed</fullName>
                </value>
                <value>
                    <fullName>Email Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Email Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Email Receipt 1</fullName>
                </value>
                <value>
                    <fullName>Phone Conversation 1</fullName>
                </value>
                <value>
                    <fullName>Phone Conversation 2</fullName>
                </value>
                <value>
                    <fullName>Ran Card</fullName>
                </value>
                <value>
                    <fullName>Ran Card 2</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 1</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 2</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Lead_Status__c</fullName>
        <label>PRT Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active (Contacted)</fullName>
                </value>
                <value>
                    <fullName>Attempted (No Contact)</fullName>
                </value>
                <value>
                    <fullName>Closed (Lost)</fullName>
                </value>
                <value>
                    <fullName>Closed-Vindicia</fullName>
                </value>
                <value>
                    <fullName>Pending-Vindicia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <description>Show what package the base product belongs to</description>
        <formula>if (CONTAINS(Base_Product__r.Name , &apos;Express Gold&apos;), &apos;Express Gold&apos;, 
if (CONTAINS(Base_Product__r.Name , &apos;Standard&apos;), &apos;Standard&apos;, 
if (CONTAINS(Base_Product__r.Name , &apos;Economy&apos;), &apos;Economy&apos;, 
if (CONTAINS(Base_Product__r.Name , &apos;Complete Coverage&apos;), &apos;Complete Coverage&apos;, 
if (CONTAINS(Base_Product__r.Name , &apos;Basic&apos;), &apos;Basic&apos;, null)
))))</formula>
        <label>Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_User_Order__c</fullName>
        <label>Parent User Order</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Product_Count__c</fullName>
        <label>Partner Product Count</label>
        <summaryFilterItems>
            <field>Order_Item__c.Product_Name__c</field>
            <operation>equals</operation>
            <value>Tax ID Obtainmen,Gold Card from American Express OPEN (SM),Registered Agent Service,Business License Package,  Small Business Banking Consultation, Website Design Consultation, Business Credit Consultation</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prior_Processing_Status_Date_Time__c</fullName>
        <formula>User_Order_Extension__r.Prior_Processing_Status_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Processing Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prior_Processing_Status__c</fullName>
        <formula>User_Order_Extension__r.Prior_Processing_Status__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Processing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Reason_Code__c</fullName>
        <formula>TEXT(User_Order_Extension__r.Prior_Reason_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proc_Status_Flag_Lvl_1__c</fullName>
        <formula>IF(
(Base_Product__r.Process__r.Process_ID__c = 7 &amp;&amp; 
(Processing_Status__c = &apos;AM Search Review&apos; || 
Processing_Status__c = &apos;Materials Needed&apos; || 
Processing_Status__c = &apos;L + S No Match&apos; ||
Processing_Status__c = &apos;Problem&apos; || 
Processing_Status__c = &apos;Application Completed&apos; || 
Processing_Status__c = &apos;Unable to Process&apos; || 
Processing_Status__c = &apos;Comp Search Mailed&apos; ||
Processing_Status__c = &apos;Comp Search G&amp;S Problem&apos; || 
Processing_Status__c = &apos;Comp Search Unable to Process&apos; || 
Processing_Status__c = &apos;Comp Search Problem&apos; || 
Processing_Status__c = &apos;Search Conflict&apos; || 
Processing_Status__c = &apos;Search Completed&apos; || 
Processing_Status__c = &apos;Search Mailed&apos; || 
Processing_Status__c = &apos;Waiting for Logo&apos;)) || 
((Base_Product__r.Process__r.Process_ID__c = 1 || Base_Product__r.Process__r.Process_ID__c = 2) &amp;&amp; 
(Processing_Status__c = &apos;Entity Name Prelim. Available&apos; || 
Processing_Status__c = &apos;Pre-Filing Problem (Information Required)&apos; || 
Processing_Status__c = &apos;Awaiting Signature From Customer&apos; || 
Processing_Status__c = &apos;Entity Names Rejected&apos; || 
Processing_Status__c = &apos;State Rejected Filing&apos; || 
Processing_Status__c = &apos;Documents Received From SOS&apos; || 
Processing_Status__c = &apos;Post-Filing Problem (Information Required)&apos; || 
Processing_Status__c = &apos;Problem&apos; || 
Processing_Status__c = &apos;Sent to Customer&apos; || 
Processing_Status__c = &apos;Unable to Process&apos;))
,True, False)</formula>
        <label>Proc Status Flag Lvl 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proc_Status_Flag_Lvl_2__c</fullName>
        <formula>IF(
(Base_Product__r.Process__r.Process_ID__c = 7 &amp;&amp;
(
(Processing_Status__c = &apos;AM Attention&apos;) || 
(Processing_Status__c = &apos;Search Conflict&apos; &amp;&amp; Processing_Status_Days_Passed__c &gt;= 2) || 
((Processing_Status__c = &apos;AM Search Review&apos; || Processing_Status__c = &apos;Comp Search Mailed&apos;) &amp;&amp; (Processing_Status_Days_Passed__c &gt;= 3)) || 
(Processing_Status__c = &apos;Application Completed&apos; &amp;&amp; Processing_Status_Days_Passed__c &gt;= 5) ||
(Processing_Status__c = &apos;AM Hold&apos; &amp;&amp; Processing_Status_Days_Passed__c &gt;= 10)
)) ||
(
(Base_Product__r.Process__r.Process_ID__c = 1 || Base_Product__r.Process__r.Process_ID__c = 2) &amp;&amp; 
(
((Processing_Status__c = &apos;Pre-Filing Problem (Information Required)&apos; || Processing_Status__c = &apos;State Rejected Filing&apos; || Processing_Status__c = &apos;Post-Filing Problem (Information Required)&apos; || Processing_Status__c = &apos;Problem&apos;) &amp;&amp; Processing_Status_Days_Passed__c &gt;= 2) || 
((Processing_Status__c = &apos;Entity Names Rejected&apos; || Processing_Status__c = &apos;Awaiting Signature From Customer&apos;) &amp;&amp; (Processing_Status_Days_Passed__c &gt;= 3))
)
)
, True, False)</formula>
        <label>Proc Status Flag Lvl 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proc_Status_Flag_Lvl_3__c</fullName>
        <formula>IF(
(Base_Product__r.Process__r.Process_ID__c = 7 &amp;&amp; 
(
Processing_Status__c = &apos;Search 15 Day Proceed&apos; || 
((Processing_Status__c = &apos;AM Search Review&apos; || Processing_Status__c = &apos;Comp Search Mailed&apos; || Processing_Status__c = &apos;Search Conflict&apos;) &amp;&amp; (Processing_Status_Days_Passed__c &gt;= 5)) || 
(Processing_Status__c = &apos;Application Completed&apos; &amp;&amp; Processing_Status_Days_Passed__c &gt;= 12)
)
) || 
((Base_Product__r.Process__r.Process_ID__c = 1 || Base_Product__r.Process__r.Process_ID__c = 2) &amp;&amp; 
((Processing_Status__c = &apos;Pre-Filing Problem (Information Required)&apos; || Processing_Status__c = &apos;Post-Filing Problem (Information Required)&apos; || Processing_Status__c = &apos;Problem&apos;) &amp;&amp; (Processing_Status_Days_Passed__c &gt;= 5))
)
, True, False)</formula>
        <label>Proc Status Flag Lvl 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proc_Status_Flag__c</fullName>
        <formula>IF(Proc_Status_Flag_Lvl_3__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), 
IF(Proc_Status_Flag_Lvl_2__c, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;), 
IF(Proc_Status_Flag_Lvl_1__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;), 
Null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proc Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <formula>Base_Product__r.Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status_Date_Time__c</fullName>
        <formula>User_Order_Extension__r.Processing_Status_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Status_Days_Passed__c</fullName>
        <description>Calculate how many days have passed since the processing status datetime value, excluding weekend.  If processing status datetime is blank, this formula field is blank.</description>
        <formula>TODAY() - DATEVALUE(Processing_Status_Date_Time__c)</formula>
        <label>Processing Status Days Passed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <formula>User_Order_Extension__r.Processing_Status__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Base_Product__r.Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Base_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Show process name of the base product on the order</description>
        <formula>Base_Product__r.Process__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Order_Renewal_Test__c</fullName>
        <label>RA Order Renewal Test</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <formula>TEXT(User_Order_Extension__r.Reason_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Agent_Count__c</fullName>
        <label>Registered Agent Count</label>
        <summaryFilterItems>
            <field>Order_Item__c.Product_Name__c</field>
            <operation>contains</operation>
            <value>Registered Agent</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBR_Product_Count__c</fullName>
        <label>SBR Product Count</label>
        <summaryFilterItems>
            <field>Order_Item__c.SBR_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SOP_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOP Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Installment_Amount__c</fullName>
        <description>Second Installment Amount</description>
        <label>2nd Installment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Installment_Status__c</fullName>
        <description>2nd Installment Status</description>
        <label>2nd Installment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Due</fullName>
                </value>
                <value>
                    <fullName>Payment Due</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Past Due - Will Reharvest</fullName>
                </value>
                <value>
                    <fullName>Past Due - Will Not Reharvest</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Manual 1 (TBD)</fullName>
                </value>
                <value>
                    <fullName>Manual 2 (TBD)</fullName>
                </value>
                <value>
                    <fullName>Uncollectible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_s_Permit_Count__c</fullName>
        <label>Seller&apos;s Permit Count</label>
        <summaryFilterItems>
            <field>Order_Item__c.Product_Name__c</field>
            <operation>contains</operation>
            <value>Seller&apos;s Permit</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State_of_Formation__c</fullName>
        <label>State of Formation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOS_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Terms of Services (TOS) is accepted by the customer</description>
        <label>TOS Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Consultation_CTN__c</fullName>
        <label>Tax Consultation-CTN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teas_Or_Teas_Plus__c</fullName>
        <label>Teas/Teas(+)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Teas</fullName>
                </value>
                <value>
                    <fullName>Teas(+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Installment_Amount__c</fullName>
        <description>Third Installment Amount</description>
        <label>3rd Installment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Installment_Status__c</fullName>
        <description>3rd Installment Status</description>
        <label>3rd Installment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Due</fullName>
                </value>
                <value>
                    <fullName>Payment Due</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Past Due - Will Reharvest</fullName>
                </value>
                <value>
                    <fullName>Past Due - Will Not Reharvest</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Manual 1 (TBD)</fullName>
                </value>
                <value>
                    <fullName>Manual 2 (TBD)</fullName>
                </value>
                <value>
                    <fullName>Uncollectible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Three_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trademark_Status__c</fullName>
        <description>Link to the trademark status page of US PTO office website</description>
        <label>USPTO Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USPTO_Serial_Number__c</fullName>
        <label>USPTO Serial #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Order_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Order Extension</label>
        <referenceTo>User_Order_Extension__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Processing Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Decline__c</fullName>
        <label>Value of Decline</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <description>For use in business orders auto assignment. Data populated by data integration.</description>
        <label>Vertical</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Design_Web_com__c</fullName>
        <label>Web Design-Web.com</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Installment_Decline_Date__c</fullName>
        <label>2nd Installment Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Installment_Paid_Date__c</fullName>
        <label>2nd Installment Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Installment_Decline_Date__c</fullName>
        <label>3rd Installment Decline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Installment_Paid_Date__c</fullName>
        <label>3rd Installment Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zazma__c</fullName>
        <label>Zazma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Partner Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All_This_Week</fullName>
        <columns>Order_Date_Time_Modified__c</columns>
        <columns>NAME</columns>
        <columns>Base_Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Order_Payment_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Base_Product_Name__c</columns>
        <columns>Parent_Order__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Date_Time_Created__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>*All - This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_100_199_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Decline Orders 100-199</label>
        <queue>Decline_Orders_100_199</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_200_299_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Decline Orders 200-299</label>
        <queue>Decline_Orders_200_299</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_300_399_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Decline Orders 300-399</label>
        <queue>Decline_Orders_300_399</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_400_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Decline Orders 400+</label>
        <queue>Decline_Orders_400</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_99_or_less_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Decline Orders 99 or less</label>
        <queue>Decline_Orders_99_or_less</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Decline_Orders_Queue</fullName>
        <columns>NAME</columns>
        <columns>Base_Product__c</columns>
        <columns>Net_minus_Filing_Fee__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Date_Time_Modified__c</columns>
        <columns>Date_Time_Created__c</columns>
        <filterScope>Queue</filterScope>
        <label>Decline Orders Queue</label>
        <language>en_US</language>
        <queue>Decline_Orders</queue>
        <sharedTo>
            <role>Outbound_Lead</role>
            <role>Outbound_Management</role>
            <role>Sales_Director</role>
            <role>Sales_Reporting_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_Orders</fullName>
        <booleanFilter>(4 AND 2 AND 3) OR (1 AND 5 AND 3) OR (1 AND 2 AND 6) or (4 AND 5 AND 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Base_Product__c</columns>
        <columns>Net_minus_Filing_Fee__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Date_Time_Modified__c</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>PRT_Contact_Status__c</columns>
        <columns>PRT_Lead_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Payment_Status__c</field>
            <operation>notEqual</operation>
            <value>Declined</value>
        </filters>
        <filters>
            <field>Second_Installment_Status__c</field>
            <operation>notEqual</operation>
            <value>Past Due - Will Reharvest,Past Due - Will Not Reharvest</value>
        </filters>
        <filters>
            <field>Third_Installment_Status__c</field>
            <operation>notEqual</operation>
            <value>Past Due - Will Reharvest,Past Due - Will Not Reharvest</value>
        </filters>
        <filters>
            <field>Order_Payment_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Second_Installment_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Third_Installment_Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>My Completed Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Decline_Orders</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Base_Product__c</columns>
        <columns>Net_minus_Filing_Fee__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Date_Time_Modified__c</columns>
        <columns>Date_Time_Created__c</columns>
        <columns>PRT_Contact_Status__c</columns>
        <columns>PRT_Lead_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Payment_Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <filters>
            <field>Second_Installment_Status__c</field>
            <operation>equals</operation>
            <value>Past Due - Will Reharvest,Past Due - Will Not Reharvest</value>
        </filters>
        <filters>
            <field>Third_Installment_Status__c</field>
            <operation>equals</operation>
            <value>Past Due - Will Reharvest,Past Due - Will Not Reharvest</value>
        </filters>
        <filters>
            <field>PRT_Lead_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed (Lost),Closed-Vindicia,Pending-Vindicia</value>
        </filters>
        <label>My Decline Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Order_Prevent_Name_Field_Update</fullName>
        <active>true</active>
        <description>Prevent user from updating the Name field other than system admin profiles</description>
        <errorConditionFormula>IF(!($Profile.Name = &apos;System Admin- Password Does Not Expire&apos; || $Profile.Name = &apos;System Administrator&apos;) , true, false) &amp;&amp; ISCHANGED( Name )</errorConditionFormula>
        <errorMessage>Order ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>